# leaderboard

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_PLAN.md  api_endpoints.md  aws_services.md  mypy.ini  package-lock.json  package.json  prd.json  progress.txt  pyproject.toml  setup.py  template.yaml  tsconfig.tsbuildinfo
.claude/skills/design-sync/: SKILL.md
.claude/skills/discover/: SKILL.md
.claude/skills/interview/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/prd-to-json/: SKILL.md
.devcontainer/: check-api-key.sh  devcontainer.json
.github/workflows/: deploy-frontend.yml
designs/: global-leaderboard.html  log-match-result.html
docs/plans/: 2026-02-14-design-alignment.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: api-client.ts
frontend/src/components/: AuthCallback.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  UnauthorizedPage.tsx
frontend/src/types/: models.ts
prisma/: schema.prisma  seed.ts
ralph/: PROMPT_build.md  PROMPT_discover.md  PROMPT_infra.md  PROMPT_interview.md  PROMPT_plan.md  PROMPT_plan_work.md  ralph.sh
specs/: manage-the-roster.md  project-overview.md  record-a-match.md  see-the-standings.md
src/app/: globals.css  layout.tsx  page.tsx
src/common/: __init__.py  api.py  dynamodb.py  elo.py  models.py
src/functions/: __init__.py
src/lib/: adminSecret.ts  elo.test.ts  elo.ts  prisma.ts
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
(+29 files in other folders)
